name:             xleb
version:          0.1.0.0
synopsis:         A simple monadic language for parsing XML structures.
description:
  A simple monadic language for parsing XML structures.
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <gdritter@galois.com>
maintainer:       Getty Ritter <gdritter@galois.com>
copyright:        ©2017 Getty Ritter
category:         XML
build-type:       Simple
cabal-version:    >= 1.14

flag build-examples
  description: Build example applications
  default:     False

library
  exposed-modules:     Text.XML.Xleb
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  build-depends:       base >=4.7 && <5
                     , xml
                     , containers
                     , mtl
  default-language:    Haskell2010

executable atom
  if !flag(build-examples)
    buildable: False
  hs-source-dirs:   examples/atom
  main-is:          Main.hs
  ghc-options:      -Wall -Werror
  build-depends:    base >=4.7 && <5
                  , xleb
                  , xml
                  , pretty-show
  default-language: Haskell2010
