name:             xleb
version:          0.1.0
synopsis:         A simple monadic language for parsing XML structures.
homepage:         https://github.com/aisamanra/xleb
description:
  A simple monadic language for parsing XML structures.
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <xleb@infinitenegativeutility.com>
maintainer:       Getty Ritter <xleb@infinitenegativeutility.com>
copyright:        ©2017 Getty Ritter
category:         XML
build-type:       Simple
cabal-version:    >= 1.14
bug-reports:      https://github.com/aisamanra/xleb/issues

source-repository head
  type: git
  location: git://github.com/aisamanra/s-cargot.git

flag build-examples
  description: Build example applications
  default:     False

library
  exposed-modules:     Text.XML.Xleb
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base       >= 4.7    && <5
                     , xml        >= 1.3    && <1.4
                     , containers >= 0.5.10 && <0.6
                     , mtl        >= 2.2    && <2.3
  default-language:    Haskell2010

executable atom
  if !flag(build-examples)
    buildable: False
  hs-source-dirs:   examples/atom
  main-is:          Main.hs
  ghc-options:      -Wall
  build-depends:    base        >=4.7    && <5
                  , xleb
                  , xml         >= 1.3   && <1.4
                  , pretty-show >= 1.6   && <1.7
  default-language: Haskell2010
